--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "ejs": "~0.8.5",
     "express": "^4.16.3",
     "express-session": "*",
+    "ip": "^1.1.5",
     "mongoose": "*",
     "morgan": "^1.0.1",
     "package.json": "^2.0.1",
     "serve-favicon": "*",
-    "socket.io": "*",
+    "socket.io": "^1.3.7",
     "static-favicon": "~1.0.0"
   }
 }
